Update URL creation